# tg_media_loader

./: .env.example  .gitignore  CONTEXT_FOR_CODEX.md  README.md  config.example.yaml  gui.py  media_loader.session  pyproject.toml  requirements.txt
downloads/Example/: metadata.ndjson
downloads/Example/.clustering/: state.json
downloads/Example/.manual_cluster/: actions.jsonl
src/telegram_media_loader/: __init__.py  cli.py  config.py  db.py  downloader.py  fs_layout.py  gui.py  logging_config.py  metadata.py  models.py  telethon_client.py
src/telegram_media_loader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
